# Quantum-safe-Kyber-Crystals

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
docs/: key_length_justification.md  protocol.md  shor_grover_analysis.md
results/: bench_raw.csv  bench_sizes.csv  bench_summary.csv  eavesdrop.pcap
scripts/: demo_eavesdrop.sh  demo_modify.sh  demo_replay.sh  plot_results.py  run_benchmark.sh
src/: alice.c  attacker.c  benchmark.c  bob.c  crypto_a.c  crypto_b.c  crypto_backend.h  net.c  net.h  protocol.c  protocol.h  session.c  session.h  test_protocol.c
